--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,7 @@ body {
 @media (max-width: 768px) {
   .header {
     width: 100%;
-    height: 30px;
+    height: 50px;
   }
 
   .header img {
@@ -93,7 +93,8 @@ body {
   }
 
   .header .container .name {
-    font-size: 10px;
+    font-size: 14px;
+    padding: 10px;
   }
 }
 .header .container .name h1 {
